--- a/resources/lang/it.json
+++ b/resources/lang/it.json
@@ -1,68 +1,68 @@
 {
-    "form submitted successfully": "form inviato con successo",
-    "the form": "il form",
+    "form submitted successfully": "Form inviato con successo",
+    "the form": "Il form",
     "submitted successfully": "è stato inviato correttamente",
     "Save" : "Salva",
     "Tickets": "Tickets",
-    "ticket title": "nome ticket",
+    "ticket title": "Nome ticket",
     "Thunder": "Thunder",
     "Office": "Ufficio",
     "Offices": "Uffici",
     "Options": "Opzioni",
     "assigning mechanism": "assigning mechanism",
-    "managers only": "solo manager",
-    "employees and manager": "assistenti e manager",
-    "employees only": "solo assistenti",
-    "manually": "manualmente",
-    "ordering": "ordering",
-    "is active": "attivo",
-    "is internal": "interno",
-    "allow escalation": "allow escalation",
-    "allow escalation after": "allow escalation after",
+    "managers only": "Solo manager",
+    "employees and manager": "Assistenti e manager",
+    "employees only": "Solo assistenti",
+    "manually": "Manualmente",
+    "ordering": "Ordering",
+    "is active": "Attivo",
+    "is internal": "Interno",
+    "allow escalation": "Allow escalation",
+    "allow escalation after": "Allow escalation after",
     "Support Channels": "Support Channels",
-    "forms": "forms",
-    "faq": "faq",
+    "forms": "Forms",
+    "faq": "FAQ",
     "Text & slug": "Testo & slug",
-    "name": "nome",
+    "name": "Nome",
     "Operation": "Operazione",
     "Operations": "Operazioni",
-    "ticket subject": "oggetto ticket",
-    "office name": "nome ufficio",
-    "from office": "da ufficio",
-    "linked forms": "forms collegati",
-    "office slug": "slug ufficio",
-    "description": "descrizione",
-    "comment": "commento",
-    "show": "mostra",
-    "user": "utente",
-    "action": "azione",
-    "status": "stato",
-    "notes": "note",
+    "ticket subject": "Oggetto ticket",
+    "office name": "Nome ufficio",
+    "from office": "Da ufficio",
+    "linked forms": "Forms collegati",
+    "office slug": "Slug ufficio",
+    "description": "Descrizione",
+    "comment": "Commento",
+    "show": "Mostra",
+    "user": "Utente",
+    "action": "Azione",
+    "status": "Stato",
+    "notes": "Note",
     "Ticket": "Ticket",
-    "updated at": "updated at",
-    "is escalated": "is escalated",
-    "is not escalated": "is not escalated",
+    "updated at": "Aggiornato il",
+    "is escalated": "Is escalated",
+    "is not escalated": "Is not escalated",
     "Normal": "Normale",
     "Height": "Alta",
     "Low": "Bassa",
     "Priority": "Priorità",
-    "saved successfully": "salvato con successo",
+    "saved successfully": "Salvato con successo",
     "Add Reply": "Aggiungi Risposta",
     "assignee name": "assignee name",
-    "view": "vedi",
+    "view": "Vedi",
     "My Tickets": "I Miei Tickets",
     "Forms": "Forms",
     "Show Ticket": "Mostra Ticket",
-    "New Ticket": "Nuovo Ticket",
+    "New Ticket": "Nuovi Ticket",
     "Closed": "Chiuso",
     "Assigned": "Assegnato",
-    "Hold Ticket": "Hold Ticket",
-    "Processing": "Valutando",
-    "Employee Reply": "Employee Reply",
-    "User Reply": "User Reply",
+    "Hold Ticket": "Ticket Trasferiti",
+    "Processing": "In Attesa",
+    "Employee Reply": "Risposta Assistente",
+    "User Reply": "Risposta Utente",
     "Referral Ticket": "Referral Ticket",
     "Submit": "Invia",
-    "On": "On",
+    "On": "Il",
     "Status": "Stato",
     "Ticket Status": "Stato Ticket",
     "Ticket Priority": "Priorità Ticket",
@@ -71,19 +71,19 @@
     "Entry Details": "Entry Details",
     "welcome to our support tickets system": "Benvenuto nel nostro sistema di Ticketing",
     "Faq": "Faq",
-    "browse your tickets": "carica i tuoi tickets",
+    "browse your tickets": "Carica i tuoi tickets",
     "Ticket System": "Sistema Ticket",
-    "you're about to open a ticket in": "stai per aprire un ticket in",
-    "your ticket number is": "il numero del tuo ticket è",
+    "you're about to open a ticket in": "Stai per aprire un ticket in",
+    "your ticket number is": "Il numero del tuo ticket è",
     "Escalated": "Escalated",
     "Office Link": "Office Link",
     "Manager": "Manager",
-    "all": "tutto",
-    "custom": "custom",
-    "permissions": "permessi",
+    "all": "Tutto",
+    "custom": "Custom",
+    "permissions": "Permessi",
     "Add User": "Aggiungi Utente",
-    "users": "utenti",
-    "all_users": "tutti gli utenti",
+    "users": "Utenti",
+    "all_users": "Tutti gli utenti",
     "All": "Tutto",
     "Change Status": "Cambia Stato",
     "Change Priority": "Cambia Priorità",
@@ -91,52 +91,55 @@
     "Reply": "Rispondi",
     "Add User with permissions": "Aggiungi utente con permessi",
     "Remove": "Rimuovi",
-    "tickets activities": "attività tickets",
-    "assign": "assegna",
-    "assigned to": "assegnato a",
-    "assigned to me": "assegnato a me",
+    "tickets activities": "Attività tickets",
+    "assign": "Assegna",
+    "assigned to": "Assegnato a",
+    "assigned to me": "Assegnati a me",
     "escalated": "escalated",
-    "office": "ufficio",
+    "office": "Ufficio",
     "Timeline": "Timeline",
-    "last operation": "ultimo intervento",
-    "show all ticket activities": "mostra tutte le attività dei ticket",
-    "ticket escalated": "escalated",
-    "ticket not escalated": "not escalated",
-    "height": "altezza",
-    "low": "low",
-    "show more": "vedi altro",
+    "last operation": "Ultimo intervento",
+    "show all ticket activities": "Mostra tutte le attività dei ticket",
+    "ticket escalated": "Escalated",
+    "ticket not escalated": "Not escalated",
+    "height": "Alta",
+    "low": "Bassa",
+    "normal" : "Normale",
+    "show more": "Vedi altro",
     "Ticket Timeline": "Ticket Timeline",
-    "ticket created": "ticket creato",
-    "ticket assigned": "ticket assegnato",
-    "ticket deescalated action": "ticket deescalated action",
-    "ticket escalated action": "ticket escalated action",
-    "ticket replay added": "ticket replay added",
-    "ticket status changed to": "stato ticket cambiato a",
+    "ticket created": "Ticket creato",
+    "ticket assigned": "Ticket assegnato",
+    "ticket deescalated action": "Ticket deescalated action",
+    "ticket escalated action": "Ticket escalated action",
+    "ticket replay added": "Risposta al ticket aggiunta",
+    "ticket status changed to": "Stato ticket cambiato a",
     "widgets Opened": "Aperto",
     "widgets Closed": "Chiuso",
     "last 7 days": "ultimi 7 giorni",
-    "total tickets": "tickets totali",
-    "total operations": "operationi totali",
-    "escalation": "escalation",
-    "All tickets": "Tutti i tickets",
+    "total tickets": "Totale Tickets",
+    "total operations": "Totale Operazioni",
+    "escalation": "Escalation",
+    "All tickets": "Tutti i Tickets",
     "Escalated tickets": "Escalated tickets",
     "Not escalated tickets": "Not escalated tickets",
     "No date is set": "Nessuna data impostata",
     "Ticket No": "Ticket No",
-    "not yet": "non ancora",
+    "not yet": "Non ancora",
     "Automated by system": "Automatizzato dal sistema",
     "By": "Da",
-    "ticket priority changed to": "priorità ticket cambiata a",
+    "By system" : "Dal Sistema",
+    "ticket priority changed to": "Priorità ticket cambiata a",
     "on": "on",
     "Open": "Apri",
-    "created at": "created at",
-    "replies": "risposte",
-    "my tickets": "i miei tickets",
+    "created at": "Creato il",
+    "replies": "Risposte",
+    "my tickets": "I Miei Tickets",
     "Transfer Ticket to Another Office": "Trasferisci a un altro ufficio",
     "Delete Ticket": "Cancella Ticket",
     "select office": "seleziona ufficio",
-    "add notes": "aggiungi note",
-    "ticket transferred": "ticket trasferito",
-    "transfer": "trasferisci",
-    "delete": "elimina"
+    "add notes": "Aggiungi note",
+    "ticket transferred": "Ticket trasferito",
+    "transfer": "Trasferisci",
+    "delete": "Elimina"
+
 }
